事件处理器等

--- a/vue-learning/00/00.html
+++ b/vue-learning/00/00.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="./00.css">
     <title>vue</title>
 </head>
 <body>
@@ -38,7 +39,7 @@
         <todo-item v-for="item in groceryList" v-bind:todo="item"></todo-item>
     </ol>
 </div>
-
+<p class="tip">试试</p>
 </body>
 <script>
     var app = new Vue({
